plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.6'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'ru.mooncess'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:3.0.4'
	developmentOnly 'org.springframework.boot:spring-boot-devtools:3.0.4'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.4'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-mail:3.0.4'

	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.0.4'
	implementation 'org.springframework.boot:spring-boot-starter-web:3.0.4'

	compileOnly 'org.projectlombok:lombok:1.18.26'
	annotationProcessor 'org.projectlombok:lombok:1.18.26'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
	runtimeOnly 'org.postgresql:postgresql:42.5.4'

	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'

	implementation 'ch.qos.logback:logback-core:1.4.6'
	implementation 'org.slf4j:slf4j-api:2.0.7'

	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'
	implementation 'org.springframework.session:spring-session-core'

	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.4'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'

	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
}

tasks.named('test') {
	useJUnitPlatform()
}
